# go-away

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bors.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
go-away/: Cargo.toml
go-away-derive/: Cargo.toml
go-away-derive-internals/: Cargo.toml
go-away-derive-internals/src/: lib.rs
go-away-derive-internals/src/type_metadata_derive/: mod.rs  type_id.rs
go-away-derive-internals/src/type_metadata_derive/snapshots/: go_away_derive_internals__type_metadata_derive__tests__newtype_struct.snap  go_away_derive_internals__type_metadata_derive__tests__struct.snap  go_away_derive_internals__type_metadata_derive__tests__struct_with_single_field.snap
go-away-derive/src/: lib.rs
go-away/src/: alias.rs  inspect.rs  lib.rs  metadata.rs  output.rs  registry.rs  type_id.rs  types.rs
go-away/src/output/: mod.rs  tabify.rs  validate.rs
go-away/src/output/go/: mod.rs  validate.rs
go-away/src/output/go/snapshots/: go_away__output__go__tests__adjacently_tagged_union_output.snap
go-away/src/output/kotlin/: data_classes.rs  enums.rs  kserializer.rs  mod.rs  structs.rs  tests.rs  unions.rs
go-away/src/output/kotlin/snapshots/: go_away__output__kotlin__tests__adjacently_tagged_union_output.snap
go-away/src/output/snapshots/: go_away__output__tests__adjacently_tagged_union_output.snap
go-away/src/output/swift/: codable.rs  coding_keys.rs  enums.rs  mod.rs  structs.rs  tests.rs  unions.rs
go-away/src/output/swift/snapshots/: go_away__output__swift__tests__adjacently_tagged_union_output.snap
go-away/src/output/typescript/: mod.rs
go-away/src/snapshots/: go_away__output__tests__adjacently_tagged_union_output.snap
go-away/src/typescript_output/: mod.rs  tabify.rs
go-away/src/typescript_output/snapshots/: go_away__typescript_output__tests__adjacently_tagged_union_output.snap
go-away/tests/: go_marshalling.rs  go_output.rs  go_validation.rs  kotlin_output.rs  kotlin_serialization.rs  output.rs  swift_codable.rs  swift_output.rs  typescript_output.rs
go-away/tests/gradle-template/: settings.gradle.kts
go-away/tests/gradle-template/app/: build.gradle.kts
go-away/tests/gradle-template/app/src/main/kotlin/go/away/test/: App.kt
go-away/tests/snapshots/: go_output__struct_output.snap  go_output__type_deduplication.snap  kotlin_output__adjacently_tagged_tuple_enums.snap  kotlin_output__externally_tagged_tuple_enum.snap  kotlin_output__lifetimes_and_strs.snap  kotlin_output__type_deduplication.snap  output__internally_tagged_tuple_enum.snap  output__lifetimes_and_strs.snap  output__newtype_enum.snap  output__struct_enum.snap  output__struct_output.snap  output__struct_output.snap.new  output__type_deduplication.snap  swift_output__adjacently_tagged_tuple_enums.snap  swift_output__externally_tagged_tuple_enum.snap  swift_output__internally_tagged_tuple_enum.snap  swift_output__lifetimes_and_strs.snap  swift_output__newtype_enum.snap  swift_output__struct_enum.snap  swift_output__struct_output.snap  swift_output__type_deduplication.snap  typescript_output__externally_tagged_tuple_enum.snap  typescript_output__internally_tagged_tuple_enum.snap  typescript_output__lifetimes_and_strs.snap  typescript_output__newtype_enum.snap  typescript_output__struct_enum.snap  typescript_output__struct_output.snap  typescript_output__type_aliases.snap  typescript_output__type_deduplication.snap  typescript_output__untagged_option_tuple_enum.snap  typescript_output__untagged_tuple_enum.snap
go-away/tests/utils/: mod.rs
