[workspace]
members = ["go-away", "go-away-derive", "go-away-derive-internals"]

[workspace.package]
version = "0.5.0"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/obmarg/go-away"
documentation = "https://docs.rs/go-away"
repository = "https://github.com/obmarg/go-away"
rust-version = "1.78"
