[package]
name = "go-away-derive-internals"
version = "0.1.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
serde_derive_internals = "=0.26.0"
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
insta = "1.7.1"
xshell = "0.1.13"