[package]
name = "go-away-derive-internals"
version = "0.2.0"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2018"
license = "MPL-2.0"
description = "Derive internals for go-away"
homepage = "https://github.com/obmarg/go-away"
documentation = "https://docs.rs/go-away"
repository = "https://github.com/obmarg/go-away"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
serde_derive_internals = "=0.26.0"
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
insta = "1.7.1"
xshell = "0.1.13"
