[package]
name = "go-away-derive-internals"
description = "Derive internals for go-away"
readme = "../README.md"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
serde_derive_internals = "=0.26.0"
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
insta = "1.7.1"
xshell = "0.2.7"
