[package]
name = "go-away-derive"
version = "0.1.1"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2018"
license = "MPL-2.0"
description = "Derives for go-away, which generates go types from rust types"
homepage = "https://github.com/obmarg/go-away"
documentation = "https://docs.rs/go-away"
repository = "https://github.com/obmarg/go-away"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
go-away-derive-internals = { path = "../go-away-derive-internals", version = "0.1.1" }
