[package]
name = "go-away-derive"
description = "Derives for go-away, which generates go types from rust types"
readme = "../README.md"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
go-away-derive-internals = { path = "../go-away-derive-internals", version = "0.5.0" }
