[package]
name = "go-away"
version = "0.5.0"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2018"
license = "MPL-2.0"
description = "Generates go types from rust types"
homepage = "https://github.com/obmarg/go-away"
documentation = "https://docs.rs/go-away"
repository = "https://github.com/obmarg/go-away"
readme = "../README.md"
keywords = ["golang", "codegen", "generate", "types"]
categories = [
    "development-tools",
    "development-tools::ffi",
    "encoding",
    "web-programming",
]

[features]
default = []
all = ["chrono"]

[dependencies]
indenter = "0.3.3"
indoc = "1.0"
go-away-derive = { path = "../go-away-derive", version = "0.5.0" }

# Integration Deps
uuid = { version = ">=1.0.0, <2.0.0", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }

[dev-dependencies]
fs_extra = "1.2.0"
insta = "1.7.1"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.3.0"
