[package]
name = "go-away"
description = "Generates go types from rust types"
keywords = ["golang", "codegen", "generate", "types"]
categories = [
    "development-tools",
    "development-tools::ffi",
    "encoding",
    "web-programming",
]
readme = "../README.md"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
all = ["chrono"]

[dependencies]
indenter = "0.3.3"
indoc = "1.0"
go-away-derive = { path = "../go-away-derive", version = "0.6.2" }

# Integration Deps
uuid = { version = "1", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }

[dev-dependencies]
fs_extra = "1.2.0"
insta = { version = "1.43.1", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
tempfile = "3.3.0"
